--- a/cities.html
+++ b/cities.html
@@ -30,9 +30,21 @@
     <div class="col-md">DELHI</div>
     <div class="col-md">LADAKH</div>
     <div class="col-md">AMRITSAR</div>
-    <div class="col-md">MMUMBAI</div> 
+    <div class="col-md">MUMBAI</div> 
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <img src="Delhi.jpg" alt="Delhi" class="img-fluid rounded">
+    </div>
+    <div class="col-md-4">
+      <img src="guntur.jpg" alt="Guntur" class="img-fluid rounded">
+    </div>
+    <div class="col-md-4">
+      <img src="uttarakhand.jpg" alt="Uttarakhand" class="img-fluid rounded">
+    </div>
+
 <br>
 <P>
   The row containing the letters (using col-sm) breaks first.
