table added with colors

--- a/cities.html
+++ b/cities.html
@@ -44,7 +44,57 @@
     <div class="col-md-4">
       <img src="uttarakhand.jpg" alt="Uttarakhand" class="img-fluid rounded">
     </div>
-
+    <div class="container mt-5">
+      <table class="table table-bordered table-striped">
+        <caption>List of Cities, Rivers, and Trees</caption>
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">Letter</th>
+            <th scope="col">City</th>
+            <th scope="col">River</th>
+            <th scope="col">Tree</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-success">
+            <th scope="row">G</th>
+            <td>Guntur</td>
+            <td>Ganges</td>
+            <td>Guava</td>
+          </tr>
+          <tr class="table-primary">
+            <th scope="row">U</th>
+            <td>Uttarakhand</td>
+            <td>Ural River</td>
+            <td>Umbrella Thorn Acacia</td>
+          </tr>
+          <tr class="table-secondary">
+            <th scope="row">D</th>
+            <td>Delhi</td>
+            <td>Danube</td>
+            <td>Dogwood</td>
+          </tr>
+          <tr class="table-warning">
+            <th scope="row">L</th>
+            <td>Ladakh</td>
+            <td>Lena River</td>
+            <td>Larch</td>
+          </tr>
+          <tr class="table-info">
+            <th scope="row">A</th>
+            <td>Amritsar</td>
+            <td>Amazon River</td>
+            <td>Apple</td>
+          </tr>
+          <tr class="table-danger">
+            <th scope="row">M</th>
+            <td>Mumbai</td>
+            <td>Mekong River</td>
+            <td>Maple</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 <br>
 <P>
   The row containing the letters (using col-sm) breaks first.
