created class button with color alert

--- a/cities.html
+++ b/cities.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <h1>Visit cities with Mahesh Gudla</h1>
-
+<br>
 <div class="container">
   <div class="row">
     <div class="col-sm-2">G</div>
@@ -33,6 +33,9 @@
     <div class="col-md">MUMBAI</div> 
   </div>
 </div>
+
+<br>
+
 <div class="container">
   <div class="row">
     <div class="col-md-4">
@@ -94,6 +97,29 @@
           </tr>
         </tbody>
       </table>
+    </div>
+
+    <br>
+    <div class="container mt-4">
+      <div class="btn-toolbar" role="toolbar" aria-label="Button groups">
+        <!-- Group 1: Success buttons -->
+        <div class="btn-group me-2" role="group" aria-label="Success Group">
+          <button type="button" class="btn btn-success">G</button>
+          <button type="button" class="btn btn-success">U</button>
+          <button type="button" class="btn btn-success">D</button>
+        </div>
+    
+        <!-- Group 2: Alert buttons -->
+        <div class="btn-group me-2" role="group" aria-label="Alert Group">
+          <button type="button" class="btn btn-warning">L</button>
+          <button type="button" class="btn btn-warning">A</button>
+        </div>
+    
+        <!-- Group 3: Danger buttons -->
+        <div class="btn-group" role="group" aria-label="Danger Group">
+          <button type="button" class="btn btn-danger">M</button>
+        </div>
+      </div>
     </div>
 <br>
 <P>
