--- a/cities.html
+++ b/cities.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> Tours and Hiking</title>
+  <title>Tours and Hiking</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
@@ -47,89 +47,119 @@
     <div class="col-md-4">
       <img src="uttarakhand.jpg" alt="Uttarakhand" class="img-fluid rounded">
     </div>
-    <div class="container mt-5">
-      <table class="table table-bordered table-striped">
-        <caption>List of Cities, Rivers, and Trees</caption>
-        <thead class="table-dark">
-          <tr>
-            <th scope="col">Letter</th>
-            <th scope="col">City</th>
-            <th scope="col">River</th>
-            <th scope="col">Tree</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="table-success">
-            <th scope="row">G</th>
-            <td>Guntur</td>
-            <td>Ganges</td>
-            <td>Guava</td>
-          </tr>
-          <tr class="table-primary">
-            <th scope="row">U</th>
-            <td>Uttarakhand</td>
-            <td>Ural River</td>
-            <td>Umbrella Thorn Acacia</td>
-          </tr>
-          <tr class="table-secondary">
-            <th scope="row">D</th>
-            <td>Delhi</td>
-            <td>Danube</td>
-            <td>Dogwood</td>
-          </tr>
-          <tr class="table-warning">
-            <th scope="row">L</th>
-            <td>Ladakh</td>
-            <td>Lena River</td>
-            <td>Larch</td>
-          </tr>
-          <tr class="table-info">
-            <th scope="row">A</th>
-            <td>Amritsar</td>
-            <td>Amazon River</td>
-            <td>Apple</td>
-          </tr>
-          <tr class="table-danger">
-            <th scope="row">M</th>
-            <td>Mumbai</td>
-            <td>Mekong River</td>
-            <td>Maple</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  </div>
+  <div class="container mt-5">
+    <table class="table table-bordered table-striped">
+      <caption>List of Cities, Rivers, and Trees</caption>
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">Letter</th>
+          <th scope="col">City</th>
+          <th scope="col">River</th>
+          <th scope="col">Tree</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="table-success">
+          <th scope="row">G</th>
+          <td>Guntur</td>
+          <td>Ganges</td>
+          <td>Guava</td>
+        </tr>
+        <tr class="table-primary">
+          <th scope="row">U</th>
+          <td>Uttarakhand</td>
+          <td>Ural River</td>
+          <td>Umbrella Thorn Acacia</td>
+        </tr>
+        <tr class="table-secondary">
+          <th scope="row">D</th>
+          <td>Delhi</td>
+          <td>Danube</td>
+          <td>Dogwood</td>
+        </tr>
+        <tr class="table-warning">
+          <th scope="row">L</th>
+          <td>Ladakh</td>
+          <td>Lena River</td>
+          <td>Larch</td>
+        </tr>
+        <tr class="table-info">
+          <th scope="row">A</th>
+          <td>Amritsar</td>
+          <td>Amazon River</td>
+          <td>Apple</td>
+        </tr>
+        <tr class="table-danger">
+          <th scope="row">M</th>
+          <td>Mumbai</td>
+          <td>Mekong River</td>
+          <td>Maple</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-    <br>
-    <div class="container mt-4">
-      <div class="btn-toolbar" role="toolbar" aria-label="Button groups">
-        <!-- Group 1: Success buttons -->
-        <div class="btn-group me-2" role="group" aria-label="Success Group">
-          <button type="button" class="btn btn-success">G</button>
-          <button type="button" class="btn btn-success">U</button>
-          <button type="button" class="btn btn-success">D</button>
-        </div>
-    
-        <!-- Group 2: Alert buttons -->
-        <div class="btn-group me-2" role="group" aria-label="Alert Group">
-          <button type="button" class="btn btn-warning">L</button>
-          <button type="button" class="btn btn-warning">A</button>
-        </div>
-    
-        <!-- Group 3: Danger buttons -->
-        <div class="btn-group" role="group" aria-label="Danger Group">
-          <button type="button" class="btn btn-danger">M</button>
-        </div>
+  <br>
+  <div class="container mt-4">
+    <div class="btn-toolbar" role="toolbar" aria-label="Button groups">
+      <!-- Group 1: Success buttons -->
+      <div class="btn-group me-2" role="group" aria-label="Success Group">
+        <button type="button" class="btn btn-success">G</button>
+        <button type="button" class="btn btn-success">U</button>
+        <button type="button" class="btn btn-success">D</button>
+      </div>
+
+      <!-- Group 2: Alert buttons -->
+      <div class="btn-group me-2" role="group" aria-label="Alert Group">
+        <button type="button" class="btn btn-warning">L</button>
+        <button type="button" class="btn btn-warning">A</button>
+      </div>
+
+      <!-- Group 3: Danger buttons -->
+      <div class="btn-group" role="group" aria-label="Danger Group">
+        <button type="button" class="btn btn-danger">M</button>
       </div>
     </div>
-<br>
-<P>
-  The row containing the letters (using col-sm) breaks first.
-  This happens because col-sm specifies a fixed width for each letter,
-  so as the screen size decreases, the letters may wrap onto the next line to fit.
-  On the other hand, the city names (using col-md) adapt their width to the available space,
-  allowing them to remain on the same line for longer before wrapping.
-</P>
+  </div>
 
+  <br>
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="#">Cities</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Rivers <span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Trees</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
+  <br>
+  <div class="container mt-4">
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Go to links
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="./basic.html">Basic</a>
+        <a class="dropdown-item" href="./advanced.html">Advanced</a>
+      </div>
+    </div>
+  </div>
+
+  <p>
+    The row containing the letters (using col-sm) breaks first.
+    This happens because col-sm specifies a fixed width for each letter,
+    so as the screen size decreases, the letters may wrap onto the next line to fit.
+    On the other hand, the city names (using col-md) adapt their width to the available space,
+    allowing them to remain on the same line for longer before wrapping.
+  </p>
 </body>
 </html>
