--- a/cities.html
+++ b/cities.html
@@ -186,5 +186,46 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+  <br>
+
+  <h3><center>Bonus</center></h3>
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+        <div class="card" style="width: 18rem;">
+            <img src="guntur.jpg" class="card-img-top" alt="AfricanViolet">
+            <div class="card-body">
+                <h5 class="card-title">GUNTUR</h5>
+                <p class="card-text">Guntur's Red Chilly is renowned globally and exported to Asia, Canada, and Europe.
+                   Guntur district is the main producer and exporter of most varieties of Chillies and chilli powder from India to countries 
+                  like Sri Lanka, Bangladesh, Middle East, South Korea, U.K. and USA & Latin America.</p>
+                <a href="https://en.wikipedia.org/wiki/Guntur" class="btn btn-primary">Roll up a frankiee at Oslo</a>
+            </div><br>
+        </div>
+        </div>
+        <div class="col-md">
+        <div class="card" style="width: 18rem;">
+            <img src="Delhi.jpg" class="card-img-top" alt="grapevines">
+            <div class="card-body">
+                <h5 class="card-title">DELHI</h5>
+                <p class="card-text">Delhi, the capital city of India, has gained immense popularity among tourists and people across the globe. 
+                  Along with its rich culture and history, the city is well-known for authentic food and fashion. .</p>
+                <a href="https://en.wikipedia.org/wiki/Delhi" class="btn btn-primary">Have a Tour to Paris</a>
+            </div><br>
+        </div>
+        </div>
+        <div class="col-md">
+        <div class="card" style="width: 18rem;">
+            <img src="uttarakhand.jpg" class="card-img-top" alt="NorfolkIslandPine">
+            <div class="card-body">
+                <h5 class="card-title">UTTTARAKHAND</h5>
+                <p class="card-text">Uttarakhand is famous for the Jim Corbett National Park, previously known as Haley's National Park.
+                   Tourists from all around India visit this park to catch a glimpse of the Royal Bengal Tigers.</p>
+                <a href="https://en.wikipedia.org/wiki/Uttarakhand" class="btn btn-primary">Have a vacation trip to Toronto</a>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
 </body>
 </html>
